<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <TextView
            android:id="@+id/item_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code" />

        <TextView
            android:id="@+id/item_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nominal" />

        <TextView
            android:id="@+id/item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value" />♦

    </LinearLayout>

</androidx.cardview.widget.CardView>